[package]
name = "rust-notifier"
version = "0.1.0"
authors = ["Fun Maker <funmaker95@gmail.com>"]

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
websocket = "*"
rss = "1.5"
time = "0.1"
curl = "*"
lazy_static = "*"
regex = "*"
hyper = "0.12"
futures-await = "0.1"
url = "1.2.1"
maplit = "*"
