[package]
name = "rust-notifier"
version = "1.0.0"
authors = ["Fun Maker <funmaker95@gmail.com>"]
edition = "2018"

[dependencies]
arc-swap = "1.1.0"
async-trait = "0.1.42"
bytes = "0.5.6"
chrono = { version = "0.4.19", features = ["serde"] }
err-derive = "0.3.0"
futures = "0.3.8"
getopts = "0.2.21"
itertools = "0.9.0"
percent-encoding = "2.1.0"
regex = "1.4.2"
reqwest = "0.10.9"
rss = "1.9.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
tokio = { version = "0.2.24", features = ["full"] }
warp = "0.2.5"
