[package]
name = "rust-notifier"
version = "1.0.0"
authors = ["Fun Maker <funmaker95@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
arc-swap = "1.1.0"
async-trait = "0.1.42"
bytes = "1.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.8"
getopts = "0.2.21"
itertools = "0.13.0"
percent-encoding = "2.1.0"
regex = "1.4.2"
reqwest = "0.12.7"
rss = "2.0.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tokio-stream = "0.1.15"
warp = "0.3.7"
